<?xml version="1.0" encoding="utf-8"?>

<com.NappKing.TaskIt.widget.AnimationLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/animation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ListView
            android:id="@+id/sidebar_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
    </LinearLayout>
    
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/content"
	    android:background="@android:color/background_light"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="top" >
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/txName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/greydark"
		        android:textColor="@color/white"
		        android:paddingLeft="10dp"
		        android:text="@string/txName" />
		
		    <EditText
		        android:id="@+id/txCurrentName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:singleLine="true"
		        android:inputType="text"
		        android:ems="10" >
		    </EditText>		    
		    
		    <TextView
		        android:id="@+id/txDetails"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/greydark"
		        android:textColor="@color/white"
		        android:paddingLeft="10dp"
		        android:text="@string/txDetails" />
		    
		    <LinearLayout
		        android:id="@+id/notes"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:clickable="true"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/txNote"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:paddingLeft="10dp"
		            android:text="@string/txNote"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <TextView
		            android:id="@+id/txResumeNote"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="right|center_vertical"
		            android:paddingRight="10dp"
		        	android:singleLine="true"
		        	android:ellipsize="marquee"
		            android:text=""
		            android:textAppearance="?android:attr/textAppearanceSmall" />        
		    </LinearLayout>
		    
		    <TextView
		        android:id="@+id/separator1"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background"/>
		        
		    <LinearLayout
		        android:id="@+id/expiration"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:clickable="true"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/txExpiration"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:paddingLeft="10dp"
		            android:text="@string/txDateExpiration"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <TextView
		            android:id="@+id/txResumeExpiration"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="right|center_vertical"
		            android:paddingRight="10dp"
		        	android:singleLine="true"
		            android:text=""
		            android:textAppearance="?android:attr/textAppearanceSmall" />        
		    </LinearLayout>
		    
		    <TextView
		        android:id="@+id/separator2"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />
		    
		    <LinearLayout
		        android:id="@+id/remember"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:clickable="true"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/txRemember"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:paddingLeft="10dp"
		            android:text="@string/txReminder"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <TextView
		            android:id="@+id/txResumeRemember"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="right|center_vertical"
		        	android:singleLine="true"
		            android:paddingRight="10dp"
		            android:text=""
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
		    </LinearLayout>
		    
		    <TextView
		        android:id="@+id/separator3"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />
		    
		    <LinearLayout
		        android:id="@+id/listSelected"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/txList"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:paddingLeft="10dp"
		            android:text="@string/txList"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <Spinner
		            android:id="@+id/selectList"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		            
		    </LinearLayout>
		    
		    <TextView
		        android:id="@+id/separator4"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />		    
		    	
		    <LinearLayout
		        android:id="@+id/priority"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:clickable="true"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/txPriority"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:paddingLeft="10dp"
		            android:text="@string/txPriority"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <TextView
		            android:id="@+id/txColourPriority"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="right|center_vertical"
		        	android:singleLine="true"
					android:layout_margin="5dp"
		        	android:textIsSelectable="false"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
		    </LinearLayout>		    
		    
		    <TextView
		        android:id="@+id/separator5"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />
		
		    <LinearLayout
		        android:id="@+id/associate"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal" >
		
		        <TextView
		            android:id="@+id/txAssociate"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:paddingLeft="10dp"
		            android:text="@string/txAssociate"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <TextView
		            android:id="@+id/txResumeAssociate"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="right|center_vertical"
		        	android:singleLine="true"
		        	android:ellipsize="marquee"
		            android:paddingRight="10dp"
		            android:text=""
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
		    </LinearLayout>		    
		    
		    <TextView
		        android:id="@+id/separator6"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />
		    
		    <CheckBox
		        android:id="@+id/chkStarred"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:text="@string/txStarred" />
		    
		    <TextView
		        android:id="@+id/separator7"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />
		    
		    <CheckBox
		        android:id="@+id/chkCompleted"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:text="@string/txCompleted" />
		    
		    <TextView
		        android:id="@+id/separator8"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:textIsSelectable="false"
		        android:background="@color/background" />
		
		</LinearLayout>
		
	</ScrollView>
	
</com.NappKing.TaskIt.widget.AnimationLayout>