<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/greylightest"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<TextView 
	    android:id="@+id/txName"
	    android:textSize="25sp"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:gravity="center_vertical|center_horizontal"
	    android:layout_marginTop="5dp"
	    android:textColor="@color/bluedark"
	    android:textStyle="bold"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="110dp"
	    android:orientation="horizontal" >
	    <ImageView
	        android:id="@+id/photo"
	        android:layout_gravity="center_vertical"
	        android:layout_width="100dp"
	        android:layout_height="80dp"
	        android:src="@drawable/unknown_contact" />
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp">     
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:id="@+id/lbMobile"
		            android:textSize="15sp"
		            android:textStyle="bold"
		            android:textColor="@color/greydark"
		            android:layout_width="55dp"
		            android:layout_height="wrap_content"
		        	android:layout_gravity="center_vertical"
		            android:text="@string/mobile"
		            />        		            
			    <ImageButton
		            android:id="@+id/btnMobile"
		            android:layout_width="35dp"
		            android:layout_height="35dp"
		            android:scaleType="fitXY"
		            android:contentDescription="@string/phone_call"
		            android:background="@android:color/transparent"
		        	android:layout_gravity="center_vertical"
		            android:src="@drawable/phone_call" />
		        <TextView 
		            android:id="@+id/txMobile"
		            android:textSize="15sp"
		            android:textColor="@color/black"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_gravity="center_vertical"
		            android:layout_weight="1"
		            />        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:id="@+id/lbHome"
		            android:textSize="15sp"
		            android:textStyle="bold"
		            android:textColor="@color/greydark"
		        	android:layout_gravity="center_vertical"
		            android:layout_width="55dp"
		            android:layout_height="wrap_content"
		            android:text="@string/home"
		            />           
			    <ImageButton
		            android:id="@+id/btnHome"
		            android:layout_width="35dp"
		            android:layout_height="35dp"
		            android:scaleType="fitXY"
		            android:contentDescription="@string/phone_call"
		            android:background="@android:color/transparent"
		        	android:layout_gravity="center_vertical"
		            android:src="@drawable/phone_call" />
		        <TextView 
		            android:id="@+id/txHome"
		            android:textSize="15sp"
		            android:textColor="@color/black"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_gravity="center_vertical"
		            android:layout_weight="1"
		            />        
			</LinearLayout>       
			
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:id="@+id/lbWork"
		            android:textSize="15sp"
		            android:textStyle="bold"
		            android:textColor="@color/greydark"
		        	android:layout_gravity="center_vertical"
		            android:layout_width="55dp"
		            android:layout_height="wrap_content"
		            android:text="@string/work"
		            />           
			    <ImageButton
		            android:id="@+id/btnWork"
		            android:layout_width="35dp"
		            android:layout_height="35dp"
		            android:scaleType="fitXY"
		            android:contentDescription="@string/phone_call"
		            android:background="@android:color/transparent"
		        	android:layout_gravity="center_vertical"
		            android:src="@drawable/phone_call" />
		        <TextView 
		            android:id="@+id/txWork"
		            android:textSize="15sp"
		            android:textColor="@color/black"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_gravity="center_vertical"
		            android:layout_weight="1"
		            />        
		    </LinearLayout>
		    
	    </LinearLayout>	 	    
	</LinearLayout>	   
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">	
		<TextView 
		    android:id="@+id/lbTasks"
		    android:background="@color/bluelightest"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    android:gravity="center_vertical|center_horizontal"
		    android:textColor="@color/bluedark"
		    android:textStyle="bold"
		    android:text="@string/tasks"/>
		<ListView
	        android:id="@android:id/list"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.06">	
		</ListView>	
		<TextView
		    android:id="@android:id/empty"
		    android:layout_marginLeft="10dp"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top"
		    android:text="@string/empty_list"/>	
	</LinearLayout>
</LinearLayout>
		    